[project]
name = "password-generator"
readme = "README.md"
description = "For generating password with python"
version = "1.1.0"
requires-python = ">=3.14"
authors = [{name = "Masahiro Koti", email="workspace2110@gmail.com"}]
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
    "flake8>=7.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
